@@ -12,6 +12,7 @@ sunuo (0.2.4) unstable; urgency=low
     - ConfigDirectory = BaseDirectory + "/Data"
     - SaveDirectory = BaseDirectory + "/Saves"
     - BackupDirectory = BaseDirectory + "/Backup"
+  * moved bootstrapping code to Bootstrap.cs
   * change to base directory
   * debian: don't symlink .exe, run with --base instead
   * debian: symlink base/Data to /etc/sunuo
